[project]
name = "webhook-server"
version = "0.1.0"
description = "Lightweight Flask server to listen for webhooks and trigger deployment scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "loguru>=0.7.0",
]
